added an about us page that links to everyones github

--- a/styles/less/main-content.less
+++ b/styles/less/main-content.less
@@ -23,3 +23,15 @@ section{
         width: 30%;
     }
 }
+
+.aboutTitle{
+text-align: center;
+}
+
+.AboutSection{
+    .flex(flex-start,flex-start,column)
+}
+
+.teamlead, .unit3, .unit2, .unit1{
+    margin:5% 40%;
+}
