--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -135,6 +135,9 @@ h1 {
 h2 {
   font-size: 2.5rem;
 }
+h3 {
+  font-size: 3rem;
+}
 p {
   font-size: 1.6rem;
 }
@@ -150,6 +153,10 @@ button:hover {
 }
 section h2,
 section p {
+  color: #37461e;
+}
+a {
+  text-decoration: none;
   color: #37461e;
 }
 nav {
@@ -187,4 +194,19 @@ section .donators {
 }
 section .campaigns {
   width: 30%;
+}
+.aboutTitle {
+  text-align: center;
+}
+.AboutSection {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.teamlead,
+.unit3,
+.unit2,
+.unit1 {
+  margin: 5% 40%;
 }
