--- a/styles/less/global.less
+++ b/styles/less/global.less
@@ -10,6 +10,10 @@ h2{
     font-size: 2.5rem;
 }
 
+h3{
+    font-size: 3rem; 
+}
+
 p{
     font-size: 1.6rem;
 }
@@ -26,4 +30,9 @@ section{
     h2,p{
         color:@darkVomitGreen
     }
+}
+
+a{
+    text-decoration: none;
+    color: @darkVomitGreen
 }
