--- a/styles/less/main-content.less
+++ b/styles/less/main-content.less
@@ -19,7 +19,7 @@ section{
     @media @phone{
         .flex(space-around,center,column);
     } 
-    .donators{
+    .supporters{ 
         width: 30%;
         @media @phone{
             width: 90%;
