--- a/styles/less/global.less
+++ b/styles/less/global.less
@@ -4,6 +4,16 @@ html{
 
 h1{
     font-size: 5rem;
+    animation-name: head;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes head{
+    0%{color:black;}
+    25%{color:white;}
+    50%{color:white;}
+    75%{color:black;}
 }
 
 h2{
