--- a/styles/less/main-content.less
+++ b/styles/less/main-content.less
@@ -46,4 +46,9 @@ text-align: center;
 
 .teamlead, .unit3, .unit2, .unit1{
     margin:5% 40%;
+    &:hover{
+        background-color:olivedrab;
+        padding: 3%;
+        border: solid 1px @darkVomitGreen;
+    }
 }
